packages/frontend/src/styles/mixins.scss
@import './variables.scss';

@mixin def_list_item {
    display: flex;
    width: 100%;
    text-decoration: none;
    padding: 6px 8px;
    margin-bottom: 1px;
    line-height: 24px;
    border-bottom: 1px solid var(--chakra-colors-gray-800);
    color:  var(--chakra-colors-gray-100);
    font-family: monospace;
    font-size: 12pt;

    &__IdentifierContainer {
        display: flex;
        align-items: center;
    }

    &__Avatar {
        margin-right: 12px;
    }

    &:hover {
        background: var(--chakra-colors-whiteAlpha-50);
        text-decoration: none;
        cursor: pointer;
    }

    &:last-child {
        border-bottom: none;
    }
}

@mixin loading-line {
    overflow: hidden;
    position: relative;

    @keyframes loading-line {
        0% {
            left: -100%;
            width: 100%;
        }
        50% {
            left: 100%;
            width: 100%;
        }
        100% {
            left: 100%;
            width: 100%;
        }
    }

    &::before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: var(--chakra-colors-gray-900);
        border-radius: 5px;
        opacity: 1;
    }

    &::after {
        content: '';
        position: absolute;
        z-index: 2;
        top: 0;
        left: -50%;
        width: 40%;
        height: 100%;
        background: linear-gradient(90deg, rgb(14 117 181) 0%, rgb(22 82 120) 100%);
        border-radius: 100px;
        opacity: .1;
        animation: loading-line linear 3s infinite;
    }

    Tr & {
        &::before {
            background-color: var(--chakra-colors-gray-800);
            opacity: .2;
        }
    }

    $timeOffset: 0.5s;

    @for $i from 1 through 10 {
        &:nth-child(#{$i}n) {
          &::after {
            animation-delay: $i * $timeOffset;
          }
        }

        Tr:nth-child(#{$i}n) & {
            &::after {
                animation-delay: $i * $timeOffset;
            }
        }
    }
}

@mixin loading-container {
    @keyframes loading-process {
        from {
            opacity: 0;
            left: -100%;
            z-index: 6;
        }
        50% {
            opacity: .25;
        }
        to {
            z-index: 6;
            left: 100%;
        }
    }
    
    @keyframes loading-bg {
        from {
            z-index: 5;
            opacity: 0;
        }
        15% {
            opacity: 1;
        }
        85% {
            opacity: 1;
        }
        to {
            opacity: 0;
            z-index: 5;
        }
    }
    
    @keyframes loading-container {
        from {
            overflow: hidden;
        }
        to {
            overflow: hidden;
        }
    }

    overflow: hidden;
    position: relative;
    animation: 1s loading-container infinite;

    &::before {
        animation: 1s loading-bg infinite;
    }

    &::after {
        animation: 1s loading-process infinite;
    }
    
    &::before, &::after {
        content: '';
        position: absolute;
        width: 100%;
        height: 100%;
        top: 0;
        opacity: 0;
        left: 0;
        z-index: -1;
    }

    &::before {
        background-color: var(--chakra-colors-gray-900);
    }

    &::after {
        background: linear-gradient(90deg, transparent 0%, rgb(14 117 181) 50%, transparent 100%);
        width: 100%;
        height: 100%;
    }
}

@mixin avatar-container {
    border-radius: $border-radius-def;
    box-shadow: 0 2px 4px rgba(0, 0, 0, .3);
    background-color: var(--chakra-colors-gray-900);
    border: 1px solid var(--chakra-colors-whiteAlpha-100);
    overflow: hidden;

    img {
        width: 100%;
        height: 100%;
        object-fit: contain;
        object-position: center;
    }
}

